change for error saving

--- a/src/Cantata/MainBundle/Resources/views/layout.html.twig
+++ b/src/Cantata/MainBundle/Resources/views/layout.html.twig
@@ -18,7 +18,7 @@
                     <a href="{{ path('addProdFromFile') }}">Մուտքագրել ապրանքների անվանումները և գները ֆայլից</a>
                 </li>
                 <li>
-                    <a href="{{ path('addProductQantityInOut') }}">Մուտքագրել ապրանքների մնացորդները կամ մուտք/ելքերը</a>
+                    <a href="{{ path('addProductQuantityInOut') }}">Մուտքագրել ապրանքների մնացորդները կամ մուտք/ելքերը</a>
                 </li>
                 <li>
                     <a href="{{ path('getResponse') }}">Ստանալ ամսեկան հաշվետվություն</a>
