--- a/src/Cantata/MainBundle/Resources/views/Main/main.html.twig
+++ b/src/Cantata/MainBundle/Resources/views/Main/main.html.twig
@@ -1,7 +1,12 @@
 <link href="{{ asset("bundles/cantatamain/css/bootstrap.min.css") }}" rel="stylesheet"/>
 <link href="{{ asset("bundles/cantatamain/css/main.css") }}" rel="stylesheet"/>
-<script src="{{ asset("bundles/cantatamain/js/jquery.js") }}"></script>
-<script src="{{ asset("bundles/cantatamain/js/bootstrap.min.js") }}"></script>
+<link href="{{ asset("bundles/cantatamain/css/styles.css") }}" rel="stylesheet"/>
+<link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Lobster" />
+
+<script src="{{ asset("bundles/cantatamain/js/vendor/jquery.js") }}"></script>
+<script src="{{ asset("bundles/cantatamain/js/vendor/bootstrap.min.js") }}"></script>
+<script src="{{ asset("bundles/cantatamain/js/vendor/angular.min.js") }}"></script>
+<script src="{{ asset("bundles/cantatamain/js/vendor/angular-resource.min.js") }}"></script>
 {% if form is defined %}
     {{ form(form) }}
     <br>
