--- a/src/Cantata/MainBundle/Resources/views/layout.html.twig
+++ b/src/Cantata/MainBundle/Resources/views/layout.html.twig
@@ -10,6 +10,8 @@
         <script src="{{ asset("bundles/cantatamain/js/vendor/bootstrap.min.js") }}"></script>
         <script src="{{ asset("bundles/cantatamain/js/vendor/angular.min.js") }}"></script>
         <script src="{{ asset("bundles/cantatamain/js/vendor/angular-resource.min.js") }}"></script>
+        <script src="{{ asset("bundles/cantatamain/js/app.js") }}"></script>
+        <script src="{{ asset("bundles/cantatamain/js/main.js") }}"></script>
     </head>
     <body>
         {% if notification is defined %}
