--- a/src/Cantata/MainBundle/Resources/public/css/main.css
+++ b/src/Cantata/MainBundle/Resources/public/css/main.css
@@ -63,3 +63,16 @@ nav {
 .fancyNav li a {
     font-size: 14px !important;
 }
+.table2 {
+    box-shadow: none !important;
+    border: 1px solid #aaa;
+}
+.table2 td {
+    background-color: transparent !important;
+}
+.table2 tr:nth-child(odd) td {
+    background-color: rgba(0,0,0,0.3) !important;
+}
+.table2 th {
+    background-color: rgba(100,100,100,0.7)
+}
