--- a/src/Cantata/MainBundle/Resources/views/Main/errors.html.twig
+++ b/src/Cantata/MainBundle/Resources/views/Main/errors.html.twig
@@ -1,5 +1,36 @@
 {% extends 'CantataMainBundle::layout.html.twig' %}
 
 {% block errors %}
-    kk
+    {% verbatim %}
+    <div ng-app="Cantata" ng-controller="MainController">
+        <table class="table table-striped table2">
+            <thead>
+                <tr>
+                    <th></th>
+                    <th>test</th>
+                    <th>test</th>
+                    <th>test</th>
+                    <th>test</th>
+                    <th>test</th>
+                    <th>test</th>
+                    <th>test</th>
+                    <th>test</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr ng-repeat="item in items">
+                    <td><input type="checkbox" ng-model="checkboxes[item.id]"/></td>
+                    <td>{{ item.code }}</td>
+                    <td>{{ item.description }}</td>
+                    <td>{{ item.is_prixod }}</td>
+                    <td>{{ item.month }}</td>
+                    <td>{{ item.quantity }}</td>
+                    <td>{{ item.shop }}</td>
+                    <td>{{ item.year }}</td>
+                    <td><a href="" class="glyphicon glyphicon-certificate"></a></td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
+    {% endverbatim %}
 {% endblock %}
