--- a/src/Cantata/MainBundle/Resources/views/layout.html.twig
+++ b/src/Cantata/MainBundle/Resources/views/layout.html.twig
@@ -10,6 +10,13 @@
         <script src="{{ asset("bundles/cantatamain/js/vendor/bootstrap.min.js") }}"></script>
         <script src="{{ asset("bundles/cantatamain/js/vendor/angular.min.js") }}"></script>
         <script src="{{ asset("bundles/cantatamain/js/vendor/angular-resource.min.js") }}"></script>
+        
+        {% if app.debug %}
+            <script src="{{ asset("bundles/cantatamain/js/app_dev_pre.js") }}"></script>
+        {% else %}
+            <script src="{{ asset("bundles/cantatamain/js/app_pre.js") }}"></script>
+        {% endif %}
+        
         <script src="{{ asset("bundles/cantatamain/js/app.js") }}"></script>
         <script src="{{ asset("bundles/cantatamain/js/main.js") }}"></script>
     </head>
