add new menu for add product

--- a/src/Cantata/MainBundle/Resources/views/layout.html.twig
+++ b/src/Cantata/MainBundle/Resources/views/layout.html.twig
@@ -31,7 +31,8 @@
                     <li id="home"><a href="/" class="homeIcon">Home</a></li>
                     <li id="news"><a href="{{ path('addProductQuantityInOut') }}">մուտք/ելքերը</a></li>
                     <li id="about"><a href="{{ path('getResponse') }}">հաշվետվություն</a></li>
-                    <li id="services"><a href="{{ path('addProdFromFile') }}">Մուտքագրել ֆայլից</a></li>
+                    <li id="services"><a href="{{ path('addProdFromFile') }}">Մուտքագրել ապրանքները</a></li>
+                    <li id="services"><a href="{{ path('addProduct') }}">Մուտքագրել ապրանք</a></li>
                 </ul>
             </nav>
         </div>
