--- a/src/Cantata/MainBundle/Resources/views/layout.html.twig
+++ b/src/Cantata/MainBundle/Resources/views/layout.html.twig
@@ -4,12 +4,15 @@
         <link href="{{ asset("bundles/cantatamain/css/bootstrap.min.css") }}" rel="stylesheet"/>
         <link href="{{ asset("bundles/cantatamain/css/main.css") }}" rel="stylesheet"/>
         <link href="{{ asset("bundles/cantatamain/css/styles.css") }}" rel="stylesheet"/>
+        <link href="{{ asset("bundles/cantatamain/css/angular-motion.min.css") }}" rel="stylesheet"/>
         <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Lobster" />
         
         <script src="{{ asset("bundles/cantatamain/js/vendor/jquery.js") }}"></script>
         <script src="{{ asset("bundles/cantatamain/js/vendor/bootstrap.min.js") }}"></script>
         <script src="{{ asset("bundles/cantatamain/js/vendor/angular.min.js") }}"></script>
+        <script src="{{ asset("bundles/cantatamain/js/vendor/angular-animate.min.js") }}"></script>
         <script src="{{ asset("bundles/cantatamain/js/vendor/angular-resource.min.js") }}"></script>
+        <script src="{{ asset("bundles/cantatamain/js/vendor/angular-strap.min.js") }}"></script>
         
         {% if app.debug %}
             <script src="{{ asset("bundles/cantatamain/js/app_dev_pre.js") }}"></script>
