--- a/src/Cantata/MainBundle/Resources/views/Main/main.html.twig
+++ b/src/Cantata/MainBundle/Resources/views/Main/main.html.twig
@@ -4,6 +4,9 @@
     {% if form is defined %}
         {{ form(form, {'id': 'form'}) }}
         <br>
+        {% if addProduct is defined %}
+            kkkk
+        {% endif %}
     {% endif %}
     {% if table is defined %}
         <table class="table">
