--- a/src/Cantata/MainBundle/Resources/views/layout.html.twig
+++ b/src/Cantata/MainBundle/Resources/views/layout.html.twig
@@ -22,6 +22,7 @@
         
         <script src="{{ asset("bundles/cantatamain/js/app.js") }}"></script>
         <script src="{{ asset("bundles/cantatamain/js/main.js") }}"></script>
+        <script src="{{ asset("bundles/cantatamain/js/search.js") }}"></script>
     </head>
     <body>
         {% if notification is defined %}
