--- a/src/Cantata/MainBundle/Resources/views/layout.html.twig
+++ b/src/Cantata/MainBundle/Resources/views/layout.html.twig
@@ -32,7 +32,7 @@
         <div class="content">
             <nav>
                 <ul class="fancyNav">
-                    <li id="home"><a href="/" class="homeIcon">Home</a></li>
+                    <li id="home"><a href="{{ path('homepage') }}" class="homeIcon">Home</a></li>
                     <li id="news"><a href="{{ path('addProductQuantityInOut') }}">մուտք/ելքերը</a></li>
                     <li id="about"><a href="{{ path('getResponse') }}">հաշվետվություն</a></li>
                     <li id="services"><a href="{{ path('addProdFromFile') }}">Մուտքագրել ապրանքները</a></li>
