--- a/src/Cantata/MainBundle/Resources/views/Main/main.html.twig
+++ b/src/Cantata/MainBundle/Resources/views/Main/main.html.twig
@@ -11,7 +11,7 @@
         {% endif %}
     {% endif %}
     {% if table is defined %}
-        <table class="table">
+        <table class="table table2">
             <tr>
                 <td>Անվանումը</td>
                 <td>Ապրանքի քանակը</td>
@@ -35,7 +35,7 @@
         <br>
     {% endif %}
     {% if result is defined %}
-        <table class="table">
+        <table class="table table2">
             <tr>
                 <td></td>
                 <td>Վաճառքի գներով</td>
