--- a/src/Cantata/MainBundle/Resources/views/layout.html.twig
+++ b/src/Cantata/MainBundle/Resources/views/layout.html.twig
@@ -4,9 +4,11 @@
         <link href="{{ asset("bundles/cantatamain/css/bootstrap.min.css") }}" rel="stylesheet"/>
         <link href="{{ asset("bundles/cantatamain/css/main.css") }}" rel="stylesheet"/>
         <link href="{{ asset("bundles/cantatamain/css/styles.css") }}" rel="stylesheet"/>
+        <link href="{{ asset("bundles/cantatamain/css/nanoscroller.css") }}" rel="stylesheet"/>
         <link href="{{ asset("bundles/cantatamain/css/angular-motion.min.css") }}" rel="stylesheet"/>
         
         <script src="{{ asset("bundles/cantatamain/js/vendor/jquery.js") }}"></script>
+        <script src="{{ asset("bundles/cantatamain/js/plugins/jquery.nanoscroller.min.js") }}"></script>
         <script src="{{ asset("bundles/cantatamain/js/vendor/bootstrap.min.js") }}"></script>
         <script src="{{ asset("bundles/cantatamain/js/vendor/angular.min.js") }}"></script>
         <script src="{{ asset("bundles/cantatamain/js/vendor/angular-animate.min.js") }}"></script>
