--- a/src/Cantata/MainBundle/Resources/public/css/main.css
+++ b/src/Cantata/MainBundle/Resources/public/css/main.css
@@ -113,7 +113,7 @@ nav {
 }
 .table3 {
     width: 400px !important;
-    margin-top: 8px;
+    margin-bottom: 0px !important;
 }
 .table3 tr:nth-child(odd) td {
     background-color: rgba(255,255,255,0.5) !important;
@@ -133,4 +133,8 @@ nav {
 }
 .table3 tr:hover {
     background-color: rgb(0, 0, 90);
+}
+.nano1 {
+    height: 200px !important;
+    margin-top: 8px;
 }
