--- a/src/Cantata/MainBundle/Resources/views/layout.html.twig
+++ b/src/Cantata/MainBundle/Resources/views/layout.html.twig
@@ -23,6 +23,7 @@
         
         <script src="{{ asset("bundles/cantatamain/js/app.js") }}"></script>
         <script src="{{ asset("bundles/cantatamain/js/main.js") }}"></script>
+        <script src="{{ asset("bundles/cantatamain/js/modify.js") }}"></script>
         <script src="{{ asset("bundles/cantatamain/js/search.js") }}"></script>
     </head>
     <body>
@@ -47,4 +48,6 @@
 {% block body %}
 {% endblock %}
 {% block errors %}
+{% endblock %}
+{% block edit %}
 {% endblock %}
