--- a/src/Cantata/MainBundle/Resources/views/Main/edit.html.twig
+++ b/src/Cantata/MainBundle/Resources/views/Main/edit.html.twig
@@ -57,6 +57,7 @@
                 </div>
                 <div>
                     <button class="btn btn-default save-button" ng-click="save()">Save</button>
+                    <button class="btn btn-default save-button" ng-click="createNewObj()">Reset</button>
                 </div>
             </div>
         </div>
